# learn_api_gw

./: Dockerfile  pyproject.toml  readme.md
.github/workflows/: ci.yml
src/: handler.py
terraform/: .gitignore  .terraform.lock.hcl  ecr.tf  events.tf  gha.tf  lambda.tf  outputs.tf  plan.out  variables.tf
tests/: test_something.py
