[tool.poetry]
name = "learn-api-gw"
version = "0.1.0"
description = "Learn Amazon API Gateway, ECR, AWS Lambda, EventBridge, Github Actions with Terraform, generative AI"
authors = ["Wong Jiang Fung <kakarukeys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.11"
jsonpickle = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
